--- a/LaTeX/eigeneransatz.tex
+++ b/LaTeX/eigeneransatz.tex
@@ -9,69 +9,37 @@
 
 \chapter{Assignment}
 \label{sec:aufgabenstellung}
- In frame of this thesis 
- -a process is to be developed for generation of the dental color shades using an inkjet printer.  
- 
- -the specs of the printing system, like drop volume or the max printing distance, are to be determined. 
- 
- -Afterwards an adequate droplet generator is to be selected. 
- 
- -With piezoelectric droplet generators, smaller and faster drops are possible but electromagnetic ones are cheaper. 
- 
- -At last the generated shades are to be verified with the existing color standards
+ In frame of this thesis a process is to be developed for generation of the dental color shades using an inkjet printer.  The specs of the printing system, like drop volume or the max printing distance, are to be determined. Afterwards an adequate droplet generator is to be selected. With piezoelectric droplet generators, smaller and faster drops are possible but electromagnetic ones are cheaper. At last the generated shades are to be verified with the existing color standards
  
  
 
 \chapter{Expected Advantages and Functions of the Solution}
-One of the most important advantages is quantification of the coloring process followed by the printing process. 
-So that, the automated printing can be enabled. 
-
-Determining the adequate drop volume provides us the needed information for selecting the droplet generator type early in the product development cycle.
-
-Also, the whole spectrum of shades can be obtained with only 5 inks by halftone printing.
-
-
+One of the most important advantages is quantification of the coloring process followed by the printing process. So that, the automated printing can be enabled. Determining the adequate drop volume provides us the needed information for selecting the droplet generator type early in the product development cycle. Also, the whole spectrum of shades can be obtained with only 5 inks by halftone printing.
 
 \chapter{Solution Structure}
-The structural concept is utilization of a 5-axis printing system. 
--4 base colors with the highest saturation (A,B,C and D4) are to be used with the brightener instead of 16 predefined shades. 
--The amount of the brightener defines the shade of the color. 
--A 3-axis table and the 2-axis nozzle holder are responsible for the coordination during the printing process..
+The structural concept is utilization of a 5-axis printing system. 4 base colors with the highest saturation (A,B,C and D4) are to be used with the brightener instead of 16 predefined shades. The amount of the brightener defines the shade of the color. A 3-axis table and the 2-axis nozzle holder are responsible for the coordination during the printing process..
 
 \chapter{Solution Processes}
 \label{sec:Lösungsprozesse}
-The process concept is realized in three stages. Each stage depends on the previous one and That’s the progress so far.
-
--First stage is finding the ink and ceramic properties, such as ink viscosity and surface tension, ceramic void fraction and ink absorption time.
-
--Second stage is determination of drop properties and deployment metrics, which consist of drop volume, nozzle escape velocity of the drops, the optimal distance between the nozzle and zirconia surface and the angle between the drop projectile and the surface.
-
--The aspects to be considered under the third stage color and shade acquisition are trace distance (the distance between two sequential lines on the printed surface), proximity effect, which refers to how the proximity of two colored areas affect the shade of the uncolored area in between and finally the dependency of the shade on the brightener ratio
+The process concept is realized in three stages. Each stage depends on the previous one and That’s the progress so far. First stage is finding the ink and ceramic properties, such as ink viscosity and surface tension, ceramic void fraction and ink absorption time. Second stage is determination of drop properties and deployment metrics, which consist of drop volume, nozzle escape velocity of the drops, the optimal distance between the nozzle and zirconia surface and the angle between the drop projectile and the surface. The aspects to be considered under the third stage color and shade acquisition are trace distance (the distance between two sequential lines on the printed surface), proximity effect, which refers to how the proximity of two colored areas affect the shade of the uncolored area in between and finally the dependency of the shade on the brightener ratio
 
 
 \chapter{Distinctive Features of the Solution}
 \label{sec:Unterscheidungsmerkmale}
 The project is the first automated printing approach in dental coloring and also the first time the shades are generated using the darkest base colors and a brightener
 
-
-
-
 \chapter{Experiments}
 
 Before moving on to the experiments I want to show you the 5 axis printing system prototype provided by Bredent for conduction of the experiments. 
-It utilizes a 
--single nozzle printhead  with
--a piezoelectric valve to generate the droplets. 
-Ink selection, positioning and drop generation commands are given with a G-Code.
-
+It utilizes a single nozzle printhead  with a piezoelectric valve to generate the droplets. Ink selection, positioning and drop generation commands are given with a G-Code.
 
 \section{1st Experiment}
-For a dental technician it is totally trivial how viscous the ink is but for an automated printing  process the quantization of the properties is highly important.
--In the first experiment, the properties of the coloring agents A1, A2 and A3.5 are determined and compared to those of water.
--The inks have a similar density to water, but with increasing coloring agent the surface tension gets lower and the viscosity gets 3 times higher when compared to water.Also, a porosity measurement for the zirconia is conducted, which revealed a 43 percent void fraction.
+For a dental technician it is totally trivial how viscous the ink is but for an automated printing  process the quantization of the properties is highly important. In the first experiment, the properties of the coloring agents A1, A2 and A3.5 are determined and compared to those of water. The inks have a similar density to water, but with increasing coloring agent the surface tension gets lower and the viscosity gets 3 times higher when compared to water.Also, a porosity measurement for the zirconia is conducted, which revealed a 43 percent void fraction.
+
 \section{2nd Experiment}
 The second experiment is about the absorption time of the droplets, which limits the printing time. We wanted to see whether a heat source can accelerate the absorption or not.
 The Absorption times are measured at temperatures ranging from 20 to 80 deg cels.The results show that a change of 60 degrees provide a 50\% reduction in time.
+
 \section{3rd Experiment}
 The purpose of the third experiment is deciding for an adequate drop size. Depending on the drop size the drop generator is to be selected. In this figure you can see a printed zirconia specimen. Each spot on the upper half has a total ink volume of 800 nL and the ones on the bottom half 400 nL. These spots are printed using drops with volumes of 100, 50, 25 and 12.5 nL.The first image shows the spots right after printing. The second one shows the surface after furnacing.A larger drop size results in shorter print duration. However they also tend to expand the spot area more compared to the smaller drops as you can see, which is bad for the resolution.The graphs show the ink intensity along the red lines and the spreading of the ink in lateral direction for each drop volume. 12.5 and 25 nL drops result in a similar spot diameter but the spots tend to get significantly larger with 50 and 100 nL Drops.
 \section{4th Experiment}
