--- a/LaTeX/einleitung.tex
+++ b/LaTeX/einleitung.tex
@@ -14,15 +14,23 @@
  	\centering
  	\includegraphics[width=0.4\textwidth]{grafiken/implant.png}
  	\caption{Single tooth replacement}
- 	\label{fig:bild1}
+ 	\label{fig:implant}
  \end{figure} 
  
- The crown of the tooth replacement is the part which imitates the visual qualities of the tooth. There are several material, which a crown can be made of or assembled from. The most popular crown material dominating the market is the Yttria-stabilized zirconia (YSZ), which has a cubic fluorite crystal structure and is going to be referred as zirconia in the frame of this work. However, but Zirconia in its pure form is plain white so coloring the crown is necessary.Dentist are using such a shade guide for a side-by-side comparison to determine the color and the shade of the teeth.One can observe that there are 4 color groups A B C and D and each of these colors have 4 shades coded with the numbers from 1 to 4. Where 1 is the least and 4 is the most saturated shade for each color. 
+ The crown of the tooth replacement is the part which imitates the visual qualities of the tooth. There are several material, which a crown can be made of or assembled from. The most popular crown material dominating the market is the Yttria-stabilized zirconia (YSZ), which has a cubic fluorite crystal structure and is going to be referred as zirconia in the frame of this thesis. However, zirconia in its pure form is a plain white material with high translucency. In case of single tooth replacement  the newle implanted crown would be absurdly white when compared to the neighboring teeth.Even when a full chin dental replacement is conducted, it is abnormal to have a full set of plain white teeth without any shading. This situation makes it a necessity to preprocess the crowns to match the neighboring teeth or another natural shade of choice in case of a fully monolithic replacement. Dentist are using a shade guide seen in the figure \ref{fig:shadeguide} for a side-by-side comparison to determine the color and the shade of the teeth. One can observe that there are 4 color groups A, B, C and D which are referred as orange-brown, yellow, grey-brown and red respectively \citep{vita}. Each of these colors have shades ranging from 1 to 4. Even though the shades are coded with the numbers from 1 to 4 with increments of 0.5 a total analogue shade acquisition is possible. The number 1 represents the shade with the least and 4 with the most saturated tone for each color.
+ \newline
+ \begin{figure}[h]
+ 	\centering
+ 	\includegraphics[width=0.9\textwidth]{grafiken/shadeguide.jpg}
+ 	\caption{Vitapan Shadeguide}
+ 	\label{fig:shadeguide}
+ \end{figure}  
  
 
 
 \chapter{State of the Research}
 \label{sec:stand_forschung}
+Addressing the shading process of the dental zirconia-based ceramics as a combined procedure of drop generation, dispersion of the ink within the porous material, generating the color below the surface of the printed area
 
 \section{Drop Deployment}
 
@@ -34,31 +42,35 @@
 \label{sec:freiheitsgrad_eines_getriebes}
 
 
-
-
-\section{Coloring behavior of the ceramic}
+\section{Ceramic coloring}
 \label{sec:grundlagen_für_die_kinematischen_betrachtungen}
 
 
 \chapter{State of the Technology}
 \label{sec:stand_technik}
+Even in the most contemporary dental laboratory of today's world, the coloring process is accomplished manually by a experienced dental technologist, who is following the guidelines prepared by the dental ink companies, which explain how a dental crown has to be colored sequentially using different colors on different areas of a single crown summarized in about 20 basic steps. The application of the ink on the dental crown with brush strokes takes about 5 minutes for each tooth depending on the manual measurements of the ink application process conducted by a dental technologist from Zirkonzahn for educational purposes.
 On the left side you can see a cutout of a lab card. Dentists mark different areas of the crown with different colors from the guide for the technicians.
 And on the right side are the tasks of a dental technician, which are mainly. Milling, Manually coloring using a brush, furnacing to burn the color to the Zirconia and lastly polishing for a natural look.
-And the coloring part is the process, on which this thesis is focused 
+And the coloring part is the process, on which this thesis is focused.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.5\textwidth]{grafiken/lab_card.png}
-	\caption{Cutout of a lab card (Sharpling, 2015)}
-	\label{fig:bild2}
+			\caption{Cutout of a lab card \citep{sharpling2014}}
+	\label{fig:lab_card}
 \end{figure}
 
-
+\begin{figure}[h]
+	\centering
+	\includegraphics[height=0.6\textwidth]{grafiken/CrownProcesses.jpg}
+	\caption{Making of dental implants \citep{zirkonzahn2018} }
+	\label{fig:CrownProcesses}
+\end{figure} 
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.6\textwidth]{grafiken/false_colored.png}
-	\caption{False colored crowns after manual brushing (Zirkonzahn GmbH, 2018)}
-	\label{fig:bild3}
+	\caption{False colored crowns after manual brushing \citep{zirkonzahn2018}}
+	\label{fig:false_colored}
 \end{figure}
 
 
