--- a/LaTeX/literatur.bib
+++ b/LaTeX/literatur.bib
@@ -27,3 +27,27 @@
 	year={2015},
 	publisher={Wiley Online Library}
 }
+
+@misc{vita,
+	title={Vita VMK Master, Working Instructions},
+	author={VITA},
+	year={2014},
+}
+@book{sharpling2014,
+	title={Principles and Practice of Esthetic Dentistry-E-Book: Essentials of Esthetic Dentistry},
+	author={Shapling, Wilson},
+	year={2014},
+	publisher={Elsevier Health Sciences}
+}
+
+@book{zirkonzahn2018,
+	title={Zirkonzahn Brochure},
+	author={GmbH Zirkonzahn},
+	year={2018},
+	url = {http://zirkonzahn.com/assets/files/brochueren/DE-Broschuere-Die-Zirkonzahn-Schule-web.pdf}
+}
+
+
+
+
+
