--- a/LaTeX/literatur.bib
+++ b/LaTeX/literatur.bib
@@ -46,7 +46,15 @@
 	year={2018},
 	url = {http://zirkonzahn.com/assets/files/brochueren/DE-Broschuere-Die-Zirkonzahn-Schule-web.pdf}
 }
-
+@article{lee2016absorption,
+	title={Absorption of impinging water droplet in porous stones},
+	author={Lee, JB and Radu, AI and Vontobel, Peter and Derome, Dominique and Carmeliet, Jan},
+	journal={Journal of colloid and interface science},
+	volume={471},
+	pages={59--70},
+	year={2016},
+	publisher={Elsevier}
+}
 
 
 
