--- a/LaTeX/eigeneransatz.tex
+++ b/LaTeX/eigeneransatz.tex
@@ -56,7 +56,8 @@ It utilizes a single nozzle printhead  with a piezoelectric valve to generate th
 \end{figure} 
 
 \section{Material Properties}
-For a dental technician it is totally trivial how viscous the ink is but for an automated printing  process the quantization of the properties is highly important. In the first experiment, the properties of the coloring agents A1, A2 and A3.5 are determined and compared to those of water. The inks have a similar density to water, but with increasing coloring agent the surface tension gets lower and the viscosity gets 3 times higher when compared to water.Also, a porosity measurement for the zirconia is conducted, which revealed a 43 percent void fraction.
+For a dental technician it is totally trivial how viscous the ink is but for an automated printing  process the quantization of the properties is highly important. In the first experiment, the properties of the coloring agents A1, A2 and A3.5 are determined and compared to those of water. The inks have a similar density to water, but with increasing coloring agent the surface tension gets lower and the viscosity gets 3 times higher when compared to water.Also, a porosity measurement for the zirconia is conducted, which revealed a 43 percent void fraction. The raw volumetric porosity measurements are 43.09,	43.00 and 43.70. The consistency of the results is also a sign for randomly close packed zirconia powder during the manufacturing procedure. Otherwise the irregular packing would inhibit the fluid drainage and cause macro voids inside the porous material after the dissipation of the impregnating liquid, which would also lead to porosity measurements with a significantly large standard deviation. 
+ 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.8\textwidth]{grafiken/InkProps.jpg}
