--- a/LaTeX/literatur.bib
+++ b/LaTeX/literatur.bib
@@ -42,7 +42,7 @@
 
 @book{zirkonzahn2018,
 	title={Zirkonzahn Brochure},
-	author={GmbH Zirkonzahn},
+	author={{Zirkonzahn GmbH}},
 	year={2018},
 	url = {http://zirkonzahn.com/assets/files/brochueren/DE-Broschuere-Die-Zirkonzahn-Schule-web.pdf}
 }
@@ -55,7 +55,101 @@
 	year={2016},
 	publisher={Elsevier}
 }
+@article{shah2008effect,
+	title={Effect of coloring with various metal oxides on the microstructure, color, and flexural strength of 3Y-TZP},
+	author={Shah, K and Holloway, JA and Denry, IL},
+	journal={Journal of Biomedical Materials Research Part B: Applied Biomaterials},
+	volume={87},
+	number={2},
+	pages={329--337},
+	year={2008},
+	publisher={Wiley Online Library}
+}
 
-
-
-
+@article{denry2008state,
+	title={State of the art of zirconia for dental applications},
+	author={Denry, Isabelle and Kelly, J Robert},
+	journal={Dental materials},
+	volume={24},
+	number={3},
+	pages={299--307},
+	year={2008},
+	publisher={Elsevier}
+}
+@article{pecho2015optical,
+	title={Optical behavior of dental zirconia and dentin analyzed by Kubelka--Munk theory},
+	author={Pecho, Oscar E and Ghinea, Razvan and Ionescu, Ana M and Cardona, Juan C and Della Bona, Alvaro and del Mar P{\'e}rez, Mar{\'\i}a},
+	journal={Dental Materials},
+	volume={31},
+	number={1},
+	pages={60--67},
+	year={2015},
+	publisher={Elsevier}
+}
+@article{markicevic2009infiltration,
+	title={Infiltration time and imprint shape of a sessile droplet imbibing porous medium},
+	author={Markicevic, B and Li, H and Sikorski, Y and Zand, AR and Sanders, M and Navaz, HK},
+	journal={Journal of colloid and interface science},
+	volume={336},
+	number={2},
+	pages={698--706},
+	year={2009},
+	publisher={Elsevier}
+}
+@article{starov2002thick,
+	title={Spreading of liquid drops over thick porous layers: complete wetting case},
+	author={Starov, VM and Zhdanov, SA and Velarde, MG},
+	journal={Langmuir},
+	volume={18},
+	number={25},
+	pages={9744--9750},
+	year={2002},
+	publisher={ACS Publications}
+}
+@article{starov2002saturated,
+	title={Spreading of liquid drops over saturated porous layers},
+	author={Starov, VM and Kosvintsev, SR and Sobolev, VD and Velarde, MG and Zhdanov, SA},
+	journal={Journal of colloid and interface science},
+	volume={246},
+	number={2},
+	pages={372--379},
+	year={2002},
+	publisher={Elsevier}
+}
+@article{clarke2002spreading,
+	title={Spreading and imbibition of liquid droplets on porous surfaces},
+	author={Clarke, A and Blake, TD and Carruthers, K and Woodward, A},
+	journal={Langmuir},
+	volume={18},
+	number={8},
+	pages={2980--2984},
+	year={2002},
+	publisher={ACS Publications}
+}
+@article{hapgood2002drop,
+	title={Drop penetration into porous powder beds},
+	author={Hapgood, Karen P and Litster, James D and Biggs, Simon R and Howes, Tony},
+	journal={Journal of Colloid and Interface Science},
+	volume={253},
+	number={2},
+	pages={353--366},
+	year={2002},
+	publisher={Elsevier}
+}
+@article{yarlagadda1989experimental,
+	title={Experimental studies of model porous media fluid dynamics},
+	author={Yarlagadda, AP and Yoganathan, AP},
+	journal={Experiments in Fluids},
+	volume={8},
+	number={1-2},
+	pages={59--71},
+	year={1989},
+	publisher={Springer}
+}
+@article{rogers2015point,
+	title={The point spread function and optical dot gain},
+	author={Rogers, Geoffrey L},
+	journal={Handbook of Digital Imaging},
+	year={2015},
+	publisher={Wiley Online Library}
+}
